--- a/src/main/java/JanelaPrincipal.form
+++ b/src/main/java/JanelaPrincipal.form
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="JanelaPrincipal">
-  <grid id="27dc6" binding="janelaPrincipal" layout-manager="GridLayoutManager" row-count="5" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="janelaPrincipal" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="1234" height="309"/>
     </constraints>
@@ -13,19 +13,19 @@
     <children>
       <component id="3deeb" class="javax.swing.JButton" binding="emprestimosButton">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="100"/>
             <preferred-size width="200" height="100"/>
             <maximum-size width="200" height="100"/>
           </grid>
         </constraints>
         <properties>
-          <background color="-5131855"/>
+          <background color="-5191198"/>
           <enabled value="true"/>
           <focusable value="false"/>
           <font/>
           <foreground color="-14737633"/>
-          <hideActionText value="true"/>
+          <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
           <text value="Empréstimos"/>
@@ -37,19 +37,19 @@
       </component>
       <component id="3093c" class="javax.swing.JButton" binding="reservasButton" default-binding="true">
         <constraints>
-          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="100"/>
             <preferred-size width="200" height="100"/>
             <maximum-size width="200" height="100"/>
           </grid>
         </constraints>
         <properties>
-          <background color="-5131855"/>
+          <background color="-5191198"/>
           <enabled value="true"/>
           <focusable value="false"/>
           <font/>
           <foreground color="-14737633"/>
-          <hideActionText value="true"/>
+          <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
           <text value="Reservas"/>
@@ -61,21 +61,21 @@
       </component>
       <component id="1fcad" class="javax.swing.JButton" binding="sociosButton">
         <constraints>
-          <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="100"/>
             <preferred-size width="200" height="100"/>
             <maximum-size width="200" height="100"/>
           </grid>
         </constraints>
         <properties>
-          <background color="-5131855"/>
+          <background color="-5191198"/>
           <contentAreaFilled value="true"/>
           <defaultCapable value="true"/>
           <enabled value="true"/>
           <focusable value="false"/>
           <font/>
           <foreground color="-14737633"/>
-          <hideActionText value="true"/>
+          <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
           <text value="Sócios"/>
@@ -87,19 +87,19 @@
       </component>
       <component id="f3993" class="javax.swing.JButton" binding="configuracoesButton">
         <constraints>
-          <grid row="1" column="7" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="100"/>
             <preferred-size width="200" height="100"/>
             <maximum-size width="200" height="100"/>
           </grid>
         </constraints>
         <properties>
-          <background color="-5131855"/>
+          <background color="-5191198"/>
           <enabled value="true"/>
           <focusable value="false"/>
           <font/>
           <foreground color="-14737633"/>
-          <hideActionText value="true"/>
+          <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
           <text value="Configurações"/>
@@ -111,19 +111,19 @@
       </component>
       <component id="4c080" class="javax.swing.JButton" binding="pesquisarButton" default-binding="true">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="100"/>
             <preferred-size width="200" height="100"/>
             <maximum-size width="200" height="100"/>
           </grid>
         </constraints>
         <properties>
-          <background color="-5131855"/>
+          <background color="-5191198"/>
           <enabled value="true"/>
           <focusable value="false"/>
           <font/>
           <foreground color="-14737633"/>
-          <hideActionText value="true"/>
+          <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
           <text value="Pesquisar"/>
@@ -135,19 +135,19 @@
       </component>
       <component id="55b6" class="javax.swing.JButton" binding="estatisticasButton">
         <constraints>
-          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="100"/>
             <preferred-size width="200" height="100"/>
             <maximum-size width="200" height="100"/>
           </grid>
         </constraints>
         <properties>
-          <background color="-5131855"/>
+          <background color="-5191198"/>
           <enabled value="true"/>
           <focusable value="false"/>
           <font/>
           <foreground color="-14737633"/>
-          <hideActionText value="true"/>
+          <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
           <text value="Estatísticas" noi18n="true"/>
@@ -159,22 +159,22 @@
       </component>
       <component id="f9b93" class="javax.swing.JButton" binding="adicionarExemplarButton" default-binding="true">
         <constraints>
-          <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="100"/>
             <preferred-size width="200" height="100"/>
             <maximum-size width="200" height="100"/>
           </grid>
         </constraints>
         <properties>
-          <background color="-5131855"/>
+          <background color="-5191198"/>
           <enabled value="true"/>
           <focusable value="false"/>
           <font/>
           <foreground color="-14737633"/>
-          <hideActionText value="true"/>
+          <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
-          <text value="Adicionar Exemplar"/>
+          <text value="Adicionar Titulo.Titulo.Exemplar"/>
         </properties>
         <clientProperties>
           <hideActionText class="java.lang.Boolean" value="false"/>
@@ -183,19 +183,19 @@
       </component>
       <component id="8f8" class="javax.swing.JButton" binding="adicionarTituloButton">
         <constraints>
-          <grid row="3" column="7" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="100"/>
             <preferred-size width="200" height="100"/>
             <maximum-size width="200" height="100"/>
           </grid>
         </constraints>
         <properties>
-          <background color="-5131855"/>
+          <background color="-5191198"/>
           <enabled value="true"/>
           <focusable value="false"/>
           <font/>
           <foreground color="-14737633"/>
-          <hideActionText value="true"/>
+          <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
           <text value="Adicionar Título"/>
@@ -205,46 +205,6 @@
           <html.disable class="java.lang.Boolean" value="false"/>
         </clientProperties>
       </component>
-      <vspacer id="6cd09">
-        <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <vspacer id="34653">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <vspacer id="f3b8a">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <hspacer id="82511">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <hspacer id="70bd1">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <hspacer id="5016a">
-        <constraints>
-          <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <hspacer id="1d25">
-        <constraints>
-          <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <hspacer id="54d33">
-        <constraints>
-          <grid row="2" column="8" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
     </children>
   </grid>
 </form>
