--- a/src/main/java/JanelaPrincipal.form
+++ b/src/main/java/JanelaPrincipal.form
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="JanelaPrincipal">
-  <grid id="27dc6" binding="janelaPrincipal" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="10" left="10" bottom="10" right="10"/>
+  <grid id="27dc6" binding="janelaPrincipal" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="10" vgap="10">
+    <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
-      <xy x="20" y="20" width="1234" height="309"/>
+      <xy x="20" y="20" width="874" height="254"/>
     </constraints>
     <properties>
-      <background color="-1907998"/>
       <enabled value="false"/>
     </properties>
     <border type="none"/>
@@ -23,7 +22,6 @@
           <background color="-5191198"/>
           <enabled value="true"/>
           <focusable value="false"/>
-          <font/>
           <foreground color="-14737633"/>
           <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
@@ -47,7 +45,6 @@
           <background color="-5191198"/>
           <enabled value="true"/>
           <focusable value="false"/>
-          <font/>
           <foreground color="-14737633"/>
           <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
@@ -73,7 +70,6 @@
           <defaultCapable value="true"/>
           <enabled value="true"/>
           <focusable value="false"/>
-          <font/>
           <foreground color="-14737633"/>
           <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
@@ -97,7 +93,6 @@
           <background color="-5191198"/>
           <enabled value="true"/>
           <focusable value="false"/>
-          <font/>
           <foreground color="-14737633"/>
           <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
@@ -121,7 +116,6 @@
           <background color="-5191198"/>
           <enabled value="true"/>
           <focusable value="false"/>
-          <font/>
           <foreground color="-14737633"/>
           <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
@@ -145,7 +139,6 @@
           <background color="-5191198"/>
           <enabled value="true"/>
           <focusable value="false"/>
-          <font/>
           <foreground color="-14737633"/>
           <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
@@ -169,12 +162,11 @@
           <background color="-5191198"/>
           <enabled value="true"/>
           <focusable value="false"/>
-          <font/>
           <foreground color="-14737633"/>
           <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
-          <text value="Adicionar Titulo.Titulo.Exemplar.Exemplar"/>
+          <text value="Adicionar Exemplar"/>
         </properties>
         <clientProperties>
           <hideActionText class="java.lang.Boolean" value="false"/>
@@ -193,7 +185,6 @@
           <background color="-5191198"/>
           <enabled value="true"/>
           <focusable value="false"/>
-          <font/>
           <foreground color="-14737633"/>
           <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
