--- a/src/main/java/JanelaCriarExemplar.form
+++ b/src/main/java/JanelaCriarExemplar.form
@@ -58,7 +58,7 @@
           <text value="Fornecedor*"/>
         </properties>
       </component>
-      <component id="165b4" class="javax.swing.JComboBox" binding="comboFornecedor">
+      <component id="165b4" class="javax.swing.JComboBox" binding="comboDistribuidor">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="550" height="30"/>
