--- a/src/main/java/JanelaCriarEmprestimo.form
+++ b/src/main/java/JanelaCriarEmprestimo.form
@@ -3,23 +3,13 @@
   <grid id="27dc6" binding="janelaCriarEmprestimo" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="504" height="124"/>
     </constraints>
-    <properties/>
+    <properties>
+      <enabled value="true"/>
+    </properties>
     <border type="none"/>
     <children>
-      <component id="334d9" class="javax.swing.JComboBox" binding="comboBoxTitulo">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="2" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="16afc" class="javax.swing.JComboBox" binding="comboBoxSocio">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="2" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
       <component id="7f643" class="javax.swing.JLabel" binding="tituloLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
@@ -35,6 +25,26 @@
         <properties>
           <text value="Sócio"/>
         </properties>
+      </component>
+      <component id="334d9" class="javax.swing.JComboBox" binding="comboBoxTitulo">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="2" use-parent-layout="false">
+            <minimum-size width="400" height="30"/>
+            <preferred-size width="400" height="30"/>
+            <maximum-size width="400" height="30"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="16afc" class="javax.swing.JComboBox" binding="comboBoxSocio">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="2" use-parent-layout="false">
+            <minimum-size width="400" height="30"/>
+            <preferred-size width="400" height="30"/>
+            <maximum-size width="400" height="30"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
       <component id="32a24" class="javax.swing.JButton" binding="submeterButton">
         <constraints>
