--- a/src/main/java/JanelaCriarEmprestimo.form
+++ b/src/main/java/JanelaCriarEmprestimo.form
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="JanelaCriarEmprestimo">
-  <grid id="27dc6" binding="janelaCriarEmprestimo" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="10" left="10" bottom="10" right="10"/>
+  <grid id="27dc6" binding="janelaCriarEmprestimo" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
-      <xy x="20" y="20" width="504" height="124"/>
+      <xy x="20" y="20" width="800" height="300"/>
     </constraints>
     <properties>
       <enabled value="true"/>
+      <minimumSize width="800" height="200"/>
+      <preferredSize width="800" height="200"/>
     </properties>
     <border type="none"/>
     <children>
@@ -20,7 +22,7 @@
       </component>
       <component id="d6e99" class="javax.swing.JLabel" binding="socioLabel">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Sócio"/>
@@ -28,27 +30,38 @@
       </component>
       <component id="334d9" class="javax.swing.JComboBox" binding="comboBoxTitulo">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="2" use-parent-layout="false">
-            <minimum-size width="400" height="30"/>
-            <preferred-size width="400" height="30"/>
-            <maximum-size width="400" height="30"/>
+          <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="30"/>
+            <preferred-size width="-1" height="30"/>
+            <maximum-size width="-1" height="30"/>
           </grid>
         </constraints>
         <properties/>
       </component>
       <component id="16afc" class="javax.swing.JComboBox" binding="comboBoxSocio">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="2" use-parent-layout="false">
-            <minimum-size width="400" height="30"/>
-            <preferred-size width="400" height="30"/>
-            <maximum-size width="400" height="30"/>
+          <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="30"/>
+            <preferred-size width="-1" height="30"/>
+            <maximum-size width="-1" height="30"/>
           </grid>
         </constraints>
         <properties/>
       </component>
+      <hspacer id="85ffd">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="166" height="11"/>
+          </grid>
+        </constraints>
+      </hspacer>
       <component id="32a24" class="javax.swing.JButton" binding="submeterButton">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="1" indent="2" use-parent-layout="false"/>
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="2" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="150" height="50"/>
+            <preferred-size width="150" height="50"/>
+            <maximum-size width="150" height="50"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Submeter"/>
@@ -56,12 +69,26 @@
       </component>
       <component id="8c7f8" class="javax.swing.JButton" binding="voltarButton">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="1" indent="2" use-parent-layout="false"/>
+          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="150" height="50"/>
+            <preferred-size width="150" height="50"/>
+            <maximum-size width="150" height="50"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Voltar"/>
         </properties>
       </component>
+      <vspacer id="5c444">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <vspacer id="cb970">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
