--- a/src/main/java/JanelaSocios.form
+++ b/src/main/java/JanelaSocios.form
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="JanelaSocios">
-  <grid id="27dc6" binding="JanelaSocios" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="janelaSocios" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="1000" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="1000" height="250"/>
+      <preferredSize width="1000" height="500"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="b5c6c" class="javax.swing.JButton" binding="btnAdicionarSocio">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="180" height="50"/>
+            <preferred-size width="180" height="50"/>
+            <maximum-size width="180" height="50"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Adicionar Sócio"/>
@@ -18,7 +25,11 @@
       </component>
       <component id="7af45" class="javax.swing.JButton" binding="btnPagamentos">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="180" height="50"/>
+            <preferred-size width="180" height="50"/>
+            <maximum-size width="180" height="50"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Pagamentos"/>
@@ -26,7 +37,11 @@
       </component>
       <component id="ccdd1" class="javax.swing.JButton" binding="btnHistoricoSocio">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="180" height="50"/>
+            <preferred-size width="180" height="50"/>
+            <maximum-size width="180" height="50"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Histórico Sócio"/>
@@ -34,15 +49,23 @@
       </component>
       <component id="a14bf" class="javax.swing.JButton" binding="btnNotificarSocio">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="180" height="50"/>
+            <preferred-size width="180" height="50"/>
+            <maximum-size width="180" height="50"/>
+          </grid>
         </constraints>
         <properties>
-          <text value="Notificar Sócio"/>
+          <text value="Notificar Sócios"/>
         </properties>
       </component>
       <component id="e4ac8" class="javax.swing.JButton" binding="btnVoltar">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="180" height="50"/>
+            <preferred-size width="180" height="50"/>
+            <maximum-size width="180" height="50"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Voltar"/>
@@ -50,21 +73,42 @@
       </component>
       <component id="79524" class="javax.swing.JCheckBox" binding="btnFiltrarSociosDividas">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <horizontalAlignment value="2"/>
           <selected value="false"/>
           <text value="Filtrar sócios com dívidas"/>
         </properties>
       </component>
-      <component id="8fddb" class="javax.swing.JTable" binding="tableListaSocios">
+      <vspacer id="cdf56">
         <constraints>
-          <grid row="0" column="0" row-span="6" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <scrollpane id="cad63">
+        <constraints>
+          <grid row="0" column="0" row-span="7" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-      </component>
+        <border type="none"/>
+        <children>
+          <component id="8fddb" class="javax.swing.JTable" binding="tableListaSocios">
+            <constraints/>
+            <properties>
+              <autoCreateRowSorter value="true"/>
+              <autoResizeMode value="1"/>
+              <background color="-1"/>
+              <gridColor color="-526345"/>
+              <opaque value="true"/>
+              <rowHeight value="30"/>
+              <rowSelectionAllowed value="true"/>
+              <showHorizontalLines value="true"/>
+              <showVerticalLines value="false"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
