--- a/src/main/java/JanelaAnularReserva.form
+++ b/src/main/java/JanelaAnularReserva.form
@@ -16,7 +16,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Socios.Reserva"/>
+          <text value="Reserva"/>
         </properties>
       </component>
       <component id="1d64a" class="javax.swing.JComboBox" binding="comboBoxReserva">
